ISIS-3167: activates ManagedObject for VALUE
- purge ObjectSpecification mockery